# elbie

./: .gitignore  .gitmodules  CONTRIBUTING.MD  Cargo.toml  LICENSE.md  README.md  rustfmt.toml  test.html
elbie/: Cargo.toml
elbie/src/: analysis.rs  bag.rs  chart.rs  cli.rs  cli_functions.rs  enumerate_with_count.rs  errors.rs  family.rs  format.rs  generation.rs  grid.rs  language.rs  language_cli.rs  lexicon.rs  lib.rs  orthography.rs  phoneme.rs  phoneme_behavior.rs  phoneme_table.rs  phoneme_table_builder.rs  phonotactics.rs  table.rs  table_writer.rs  test.rs  transformation.rs  transformation_cli.rs  transformer.rs  validation.rs  weighted_vec.rs  word.rs  word_table.rs
elbie/src/phoneme/: ipa.rs
goblin/: Cargo.toml
goblin/lexicons/: elven-numbers-in-goblin.csv  elven-numbers-in-hobgoblin.txt  elven-numbers.csv  random-goblin.txt  to-hobgoblin.txt
goblin/src/: goblin.rs  hobgoblin.rs  main.rs  phonemes.rs
install-git-hooks/: pre-push.sample  readme.md
ipa/: Cargo.toml
ipa/src/: main.rs
ipa/src/phoneme/: ipa.rs
unitool/: Cargo.toml
unitool/src/: main.rs
